--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
-					<h2>SAY how to build a website LEH</h2>
+				<section  data-background-image="./img/build.jpg">
+					<h2><span class='highlight'>SAY</span> how to build website <span class='highlight'>LEH</span></h2>
 				</section>
-				<section class="aboutMe" data-background-image="./icons/stacygoh.png">
+				<section class="aboutMe" data-background-image="./img/stacygoh.png">
 					<h3>Stacy Goh</h3>
 					<div class="descriptionMyself">
 						<p>Software Engineer @ Govtech</p>
 						<p>Self taught</p>
 						<p>Love building new stuff</p>
-						<p>I write articles</p>
-						<p>Ask me about session management, about react/react-native</p>						
+						<p>Write articles</p>
+						<p>Ask me about session management, about react/react-native</p>											
 					</div> 
 				</section>
 				<section>
@@ -29,12 +29,14 @@
 					<small>To say what you think and to challenge directly.</small>
 				</section>
 				<section>
+					<img src='./img/radical_candor.png'/>
+				</section>				
+				<section>
 					Are there no quick avenues to receive feedback from people whom you work with?
 				</section>
-				<section>sayleh.com</section>
 				<section>
-					What is Sayleh?
-				</section>
+					<h2>Sayleh</h2>
+				</section>				
 				<section class='left'>
 					<h2>Say.leh</h2>
 					<small>/sā/ /'le</small>
@@ -48,10 +50,16 @@
 					Demo? (hmmmm...)
 				</section>	
 				<section>
-					Let's talk geeky.
+					<h2>sayleh.com</h2>
+					<small>Disclaimer: application might break apart, explode or do something beyond your imagination.</small>
 				</section>
 				<section>
-					<h2>The tech stack</h2>
+					Let's talk geeky.
+				</section>
+				<section data-background-image="./img/stack.jpg">
+					<div class='sectionHeader'>
+						<h2>The tech stack</h2>
+					</div>
 				</section>
 				<section>
 					ReactJS + NodeJS
@@ -66,32 +74,39 @@
 					1. Validation errors
 				</section>
 				<section>
-					2. I can change my database anytime
+					2. I can change my database software anytime
 				</section>				
 				<section>
 					3. Model View Controller (MVC)
-				</section>				
+				</section>	
 				<section>
-					<h2>Session management</h2>
+					4. Seed test data
 				</section>
-				<section>
-					Localstorage vs cookies?
-				</section>
-				<section>
-					
-				</section>
-				<section>
-					<h2>Deployment</h2>
+				<section data-background-image="./img/deployment.jpg">
+					<div class='sectionHeader'>
+						<h2>Deployment</h2>
+					</div>
 				</section>
 				<section>
 					DigitalOcean + Nginx + PM2
-				</section>	
-				<section>
-					<h2>Logging</h2>
-					<small>The step most people overlook</small>
 				</section>
-				<section>
-						<img src='./img/hacking.png'/>
+				<section class='left'>
+					<h2>Nginx</h2>
+					<small>/ˌɛndʒɪnˈɛks/ EN-jin-EKS</small>
+					<p>Reverse proxy to host multiple domains on one Server/IP</p>
+				</section>
+				<section class='left'>
+					<h2>PM2</h2>
+					<small>NodeJS Process Manager</small>
+					<p>It is going to keep your site up by restarting the application if it crashes.</p>
+				</section>								
+				<section data-background-image="./img/logging.jpg">
+					<div class='sectionHeader'>
+						<h2>Logging</h2>
+						<small>The step most people overlook</small>
+					</div>	
+				</section>
+				<section data-background-image="./img/hacking.png">
 				</section>				
 				<section>
 					Morgan + Winston
@@ -103,17 +118,21 @@
 					Assigning levels to logging
 				</section>
 				<section>
-					What have I learnt?
+					<h2>TL;DR</h2>
 				</section>
 				<section>
-					<p>UI/UX is so damn important</p> 
-					<small>The devil is in the details</small>
+					<h2>You !== user</h2> 
+					<small>UI/UX is so damn important</small>
 				</section>
 				<section>
-						There is a lot more than just building a product
+					<img src='./img/front.jpg'/>
 				</section>				
 				<section>
-					Change is a constant 
+					<h2>Code !== Product</h2>
+					<small>There is a lot more than just building a product</small>
+				</section>				
+				<section>
+					<h2>Change is a constant</h2> 
 				</section>
 				<section>
 					<br/><br/>
