--- a/index.html
+++ b/index.html
@@ -21,16 +21,18 @@
 					</div> 
 				</section>
 				<section>
+					<h2>How this came about</h2>
+				</section>				
+				<section>
 					<h2>Feedback</h2>
 					<small>The word that makes you want to cover your ears.</small>
 				</section>
 				<section>
-					<h2>Radical Candor</h2>
-					<small>To say what you think and to challenge directly.</small>
-				</section>
+					If you have nothing nice to say, dont say anything at all
+				</section>		
 				<section>
-					<img src='./img/radical_candor.png'/>
-				</section>				
+					Elon Musk once said, “I think it’s very important to have a feedback loop, where you’re constantly thinking about what you’ve done and how you could be doing it better.”
+				</section>							
 				<section>
 					Are there no quick avenues to receive feedback from people whom you work with?
 				</section>
@@ -71,14 +73,14 @@
 					Benefits of using an Object-Relational Mapping tool?
 				</section>
 				<section>
-					1. Validation errors
-				</section>
+					1. Model View Controller (MVC)
+				</section>	
 				<section>
 					2. I can change my database software anytime
-				</section>				
+				</section>		
 				<section>
-					3. Model View Controller (MVC)
-				</section>	
+					3. Validation errors
+				</section>		
 				<section>
 					4. Seed test data
 				</section>
@@ -109,14 +111,26 @@
 				<section data-background-image="./img/hacking.png">
 				</section>				
 				<section>
-					Morgan + Winston
-				</section>
-				<section>
 					console.log()?
-				</section>			
-				<section>
-					Assigning levels to logging
 				</section>
+				<section>
+					You cannot assign levels to logging
+					<small>Differentiate certain kinds of logs in development and production</small>
+				</section>
+				<section>
+						Winston + Morgan
+				</section>
+				<section>
+						<h2>Winston</h2>
+						<small>Logging library for Node.js</small>
+						<p>{ error: 0, warn: 1, info: 2, verbose: 3, debug: 4, silly: 5 }</p>
+				</section>					
+				<section>
+						<h2>Morgan</h2>
+						<small>HTTP request logging middleware</small>
+						<p>e.g., :method :url :status :response-time ms - :res[content-length]</p>
+						<p>GET / 200 0.235 ms - 12</p>
+				</section>				
 				<section>
 					<h2>TL;DR</h2>
 				</section>
@@ -125,14 +139,21 @@
 					<small>UI/UX is so damn important</small>
 				</section>
 				<section>
-					<img src='./img/front.jpg'/>
-				</section>				
+					<img class='screenshot' src='./img/front.png'/>
+				</section>	
+				<section>
+					<img class='screenshot' src='./img/draft1.png'/>
+				</section>					
+				<section>
+					<h2>Don't reinvent the wheel</h2>
+				</section>
+				<section>
+					<img class='screenshot' src='./img/dashboard.png'/>
+					<img class='screenshot' src='./img/meetup.png'/>
+				</section>							
 				<section>
 					<h2>Code !== Product</h2>
 					<small>There is a lot more than just building a product</small>
-				</section>				
-				<section>
-					<h2>Change is a constant</h2> 
 				</section>
 				<section>
 					<br/><br/>
@@ -142,7 +163,10 @@
 						<p><small><img class="miniIcons" src="./img/github-logo.png">github.com/stacygohyunsi</small></p>
 						<p><small><img class="miniIcons" src="./img/medium.png">medium.com/@stacygoh</small></p>
 					</div>
-				</section>			
+				</section>	
+				<section>
+						stacygohyunsi.sayleh.com
+				</section>						
 			</div>
 		</div>
 		<script src="./node_modules/reveal.js/js/reveal.js"></script>
@@ -151,12 +175,3 @@
 		</script>
 	</body>
 </html>
-
-1. What is Sayleh?
-
-2. How is it built?
-3. Logging?
-3. How is it deployed?
-4. What have I learnt?
-- UI/UX is damn important (The devil is in the details)
-- The beauty of containerisation/docker
